fix: style update with truncate and only available users in thread mention

--- a/src/app/main-content/channel/channel.scss
+++ b/src/app/main-content/channel/channel.scss
@@ -737,4 +737,8 @@
   .channel__panel {
     height: auto;
   }
+
+  .channel__mention-suggestions {
+    max-width: 70vw;
+  }
 }
